--- a/escuderias/ferrari.html
+++ b/escuderias/ferrari.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Tauri</title>
+    <title>Ferrari</title>
     <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/css/alphaTauri.css">
+    <link rel="stylesheet" href="/css/ferrari.css">
 </head>
 
 <body>
@@ -25,74 +25,74 @@
         </div>
     </header>
 
-    <h1>ALPHA TAURI</h1>
+    <h1>FERRARI</h1>
     <div class="underline"></div>
 
     <section>
         
         <div class="escuderia">
-            <img src="/img/alpha_tauri.jpg" alt="logo">
+            <img src="/img/ferrari.jpg" alt="logo">
             <div>
                 <table>
                     <tr>
                         <th>Nombre Completo</th>
-                        <td>Scuderia AlphaTauri</td>
+                        <td>Scuderia Ferrari</td>
                     </tr>
                     <tr>
                         <th>Base</th>
-                        <td>Faenza, Italia</td>
+                        <td>Maranello, Italia</td>
                     </tr>
                     <tr>
                         <th>Jefe de Equipo</th>
-                        <td>Franz Tost</td>
+                        <td>Frédéric Vasseur</td>
                     </tr>
                     <tr>
                         <th>Jefe Tecnico</th>
-                        <td>Jody Egginton</td>
+                        <td>Enrico Cardile / Enrico Gualtieri</td>
                     </tr>
                     <tr>
                         <th>Chasis</th>
-                        <td>AT04</td>
+                        <td>SF-23</td>
                     </tr>
                     <tr>
                         <th>Unidad de Potencia</th>
-                        <td>Honda RBPT</td>
+                        <td>Ferrari</td>
                     </tr>
                     <tr>
                         <th>Primera Aparicion</th>
-                        <td>1985</td>
+                        <td>1950</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
-                        <td>N/A</td>
+                        <td>16</td>
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>1 (x2)</td>
+                        <td>1 (x243)</td>
                     </tr>
                     <tr>
                         <th>Poles</th>
-                        <td>1</td>
+                        <td>242</td>
                     </tr>
                     <tr>
                         <th>Vueltas Rapidas</th>
-                        <td>2</td>
+                        <td>259</td>
                     </tr>
                 </table>
 
             </div>
             <div class="escuderia_pilotos">
                 <div class="pilotos">
-                    <a href="/pilotos/tsunoda.html"><img src="/img/tsunoda.jpg" alt="alpha_tauri"></a>
-                    <h4>22</h4>
-                    <p>Yuki Tsunoda</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/leclerc.html"><img src="/img/leclerc.jpg" alt="ferrari"></a>
+                    <h4>16</h4>
+                    <p>Charles Leclerc</p>
+                    <h5>FERRARI</h5>
                 </div>
                 <div class="pilotos">
-                    <a href="/pilotos/nyckDeVries.html"><img src="/img/nyckDeVries.jpg" alt="alpha_tauri"></a>
-                    <h4>21</h4>
-                    <p>Nick De Vries</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/sainz.html"><img src="/img/sainz.jpg" alt="ferrari"></a>
+                    <h4>55</h4>
+                    <p>Carlos Sainz</p>
+                    <h5>FERRARI</h5>
                 </div>
             </div>
         </div>
