--- a/escuderias/williams.html
+++ b/escuderias/williams.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Tauri</title>
+    <title>Williams</title>
     <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/css/alphaTauri.css">
+    <link rel="stylesheet" href="/css/williams.css">
 </head>
 
 <body>
@@ -25,74 +25,74 @@
         </div>
     </header>
 
-    <h1>ALPHA TAURI</h1>
+    <h1>WILLIAMS</h1>
     <div class="underline"></div>
 
     <section>
         
         <div class="escuderia">
-            <img src="/img/alpha_tauri.jpg" alt="logo">
+            <img src="/img/williams.jpg" alt="logo">
             <div>
                 <table>
                     <tr>
                         <th>Nombre Completo</th>
-                        <td>Scuderia AlphaTauri</td>
+                        <td>Williams Racing</td>
                     </tr>
                     <tr>
                         <th>Base</th>
-                        <td>Faenza, Italia</td>
+                        <td>Grove, Reino Unido</td>
                     </tr>
                     <tr>
                         <th>Jefe de Equipo</th>
-                        <td>Franz Tost</td>
+                        <td>James Vowles</td>
                     </tr>
                     <tr>
                         <th>Jefe Tecnico</th>
-                        <td>Jody Egginton</td>
+                        <td>Por confirmar</td>
                     </tr>
                     <tr>
                         <th>Chasis</th>
-                        <td>AT04</td>
+                        <td>FW45</td>
                     </tr>
                     <tr>
                         <th>Unidad de Potencia</th>
-                        <td>Honda RBPT</td>
+                        <td>Mercedes</td>
                     </tr>
                     <tr>
                         <th>Primera Aparicion</th>
-                        <td>1985</td>
+                        <td>1978</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
-                        <td>N/A</td>
+                        <td>9</td>
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>1 (x2)</td>
+                        <td>1 (x114)</td>
                     </tr>
                     <tr>
                         <th>Poles</th>
-                        <td>1</td>
+                        <td>128</td>
                     </tr>
                     <tr>
                         <th>Vueltas Rapidas</th>
-                        <td>2</td>
+                        <td>133</td>
                     </tr>
                 </table>
 
             </div>
             <div class="escuderia_pilotos">
                 <div class="pilotos">
-                    <a href="/pilotos/tsunoda.html"><img src="/img/tsunoda.jpg" alt="alpha_tauri"></a>
-                    <h4>22</h4>
-                    <p>Yuki Tsunoda</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/albon.html"><img src="/img/albon+.jpg" alt="williams"></a>
+                    <h4>23</h4>
+                    <p>Alejandro Albon</p>
+                    <h5>WILLIAMS</h5>
                 </div>
                 <div class="pilotos">
-                    <a href="/pilotos/nyckDeVries.html"><img src="/img/nyckDeVries.jpg" alt="alpha_tauri"></a>
-                    <h4>21</h4>
-                    <p>Nick De Vries</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/logan.html"><img src="/img/logan.jpg" alt="williams"></a>
+                    <h4>2</h4>
+                    <p>Logan Sargeant</p>
+                    <h5>WILLIAMS</h5>
                 </div>
             </div>
         </div>
