--- a/pilotos/albon.html
+++ b/pilotos/albon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Alejandro Albon</title>
 </head>
 <body>
     <header>
@@ -25,36 +25,36 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/albon+.jpg" alt="albon">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>23</p>
+                    <img src="/img/bandera_tailandia.png" alt="bandera">
+                    <h4>Alejandro Albon</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_albon.png" alt="casco_albon">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Williams</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Tailandia</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>2</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>202</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>60</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>3 (x2)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>4</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>23/03/1996</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Londres, Inglaterra</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,11 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>Nacido en Londres pero compitiendo bajo la bandera de Tailandia, la primera palabra de Alexander Albon fue de hecho italiano. Esa palabra era Ferrari, aunque fue con otro equipo italiano que tuvo su gran oportunidad en la F1.</p>
+            <p>Idolatrando a Michael Schumacher y soñando con correr algún día en la Fórmula 1, el junior Albon fue llevado al título de GP2016 3 por un tal Charles Leclerc. Luego dejó su gran amistad con George Russell en la pista cuando llevó la lucha por el título de Fórmula 2018 2 al alambre.</p>
+            <p>Graduado en la gran liga de F1 junto con otro contemporáneo, Lando Norris, en 2019, Albon habló en la pista con Toro Rosso en las primeras carreras, ganando un ascenso a mitad de temporada a Red Bull Racing.</p>
+            <p>Albon, un elegante over-taker con una mentalidad de campeonato, no se inmutó al asociarse con Max Verstappen para la segunda mitad de su temporada de novato, terminando entre los seis primeros en ocho de sus nueve carreras de 2019 con Red Bull.</p>
+            <p>Mantenerse en contacto con el futuro campeón resultó más difícil en 2020 y Red Bull lo eliminó de su alineación de carreras. Sin embargo, de manera crucial, Albon fue retenido como piloto de pruebas y reserva, manteniéndolo muy en el radar de los jefes de equipo, lo que lo llevó a su regreso a la parrilla en 2022 con Williams.</p>
         </div>
     </section>
 
