--- a/pilotos/alonso.html
+++ b/pilotos/alonso.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Fernando Alonso</title>
 </head>
 <body>
     <header>
@@ -25,56 +25,56 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/alonso.jpg" alt="alonso">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>14</p>
+                    <img src="/img/bandera_españa.jpg" alt="bandera">
+                    <h4>Fernando Alonso</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_alonso.png" alt="casco_alonso">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Aston Martin</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>España</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>99</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>2076</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>359</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
-                        <td>N/A</td>
+                        <td>2</td>
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>1 (x32)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>29/07/1981</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Oviedo, España</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,11 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>Michael Schumacher fue el rey indiscutible de la Fórmula 1 a principios de la década de 2000, obteniendo victorias y campeonatos a un ritmo que era simplemente inaudito en ese momento. Iba a hacer falta a alguien muy especial para derrocar a la leyenda de Ferrari de su trono, y que fue Fernando Alonso quien lo hizo, te dice todo lo que necesitas saber sobre el español.</p>
+            <p>Ferozmente competitivo, Alonso no es tímido acerca de su talento, calificándose a sí mismo como 9/10 "en todo", y pocos en el conocimiento estarían en desacuerdo, con sus actuaciones en la F1 caracterizadas por una velocidad vertiginosa, un pensamiento táctico brillante, un arte de carrera ejemplar, un ojo afilado para los detalles y una determinación implacable para ganar.</p>
+            <p>Un rompedor de récords en serie en sus primeros días, fue, en un momento, el polesitter más joven de la F1, ganador de carreras, campeón del mundo y doble campeón del mundo mientras engullía el éxito con el equipo Renault. Sin embargo, incluso Alonso no pudo continuar esa increíble carrera en su carrera posterior, sin poder agregar otro título a su colección a pesar de los hechizos en McLaren y Ferrari.</p>
+            <p>Pero después de dos años alejado de las carreras de Fórmula 1, y con dos victorias en Le Mans en el bolsillo, Alonso regresó con Alpine en 2021. Su velocidad y determinación no disminuyeron, volvió al podio ese año, pero frustrado por la poca fiabilidad, y la falta de un contrato a largo plazo, la temporada siguiente, optó por abandonar el barco una vez más.</p>
+            <p>Ahora Alonso espera que Aston Martin sea el equipo con el que finalmente vuelva a ganar, ya que tiene asuntos pendientes con la F1...</p>
         </div>
     </section>
 
