--- a/pilotos/logan.html
+++ b/pilotos/logan.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Logan Sargeant</title>
 </head>
 <body>
     <header>
@@ -25,24 +25,24 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/logan.jpg" alt="logan">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>2</p>
+                    <img src="/img/bandera_estadosUnidos.jpg" alt="bandera">
+                    <h4>Logan Sargeant</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_logan.png" alt="casco_logan">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Williams</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Estados Unidos</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
@@ -50,11 +50,11 @@
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>12 (x1)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>16</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>31/12/2001</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Fort Lauderdale, Florida</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,12 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>Logan Sargeant se convierte en el primer piloto estadounidense de F1 en casi ocho años cuando llega a la parrilla para la temporada 2023, dando al país un favorito local para animar una vez más.</p>
+            <p>Un prolífico ganador del título en karting, la gloria del campeonato eludió a Sargeant después de hacer la transición a las carreras de monoplazas, pero las pole positions y las victorias en carreras en casi todas las categorías que disputó subrayaron su velocidad bruta y potencial.</p>
+            <p>De hecho, terminar subcampeón en F4 UAE, tercero en British F4 y tercero en F3 (después de haber subido al podio en el prestigioso Gran Premio de Macao) demostró que podía estar allí o por ahí en una variedad de campeonatos, con mucho potencial aún por explotar.</p>
+            <p>También convenció a Williams de agregar al joven a sus libros cuando llegó a la F2, donde más victorias en carreras y otra clasificación entre los tres primeros en 2022 aseguraron los puntos de Super Licencia necesarios para completar el viaje y graduarse a la F1 con el equipo Grove para 2023.</p>
+            <p>Desde el quinteto de apariciones de Alexander Rossi con los marcadores Manor al final de la temporada 2015, ningún estadounidense ha adornado la parrilla de F1, y Sargeant espera cambiar eso en su primera temporada.</p>
+            <p>Y con tres carreras que se celebrarán en los Estados Unidos en 2023, viajes a Miami, Austin y Las Vegas planeados, la última estrella de la F1 de Estados Unidos será estimulada por un montón de apoyo en casa durante su campaña de novato.</p>
         </div>
     </section>
 
