--- a/pilotos/norris.html
+++ b/pilotos/norris.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Lando Norris</title>
 </head>
 <body>
     <header>
@@ -25,36 +25,36 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/norris.jpg" alt="alonso">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>4</p>
+                    <img src="/img/bandera_reinoUnido.jpg" alt="bandera">
+                    <h4>Lando Norris</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_norris.png" alt="casco_norris">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>McLaren</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Reino Unido</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>6</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>428</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>83</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>2 (x1)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>13/11/1999</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Bristol, Reino Unido</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,10 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>McLaren tuvo al adolescente británico en sus libros durante dos años antes de llevarlo rápidamente a la galaxia de estrellas de la F1 en 2019. Un petardo en su carrera junior, con una inclinación por las pole positions y las peleas rueda a rueda, Norris no los decepcionó.</p>
+            <p>Junto con el altamente calificado, y mucho más experimentado, Carlos Sainz, su temporada de novato fue impresionante, Norris superó al español en su batalla de clasificación cara a cara, anotando puntos 11 veces, y solo perdiendo por poco un puesto en el campeonato top-10.</p>
+            <p>Un podio inaugural llegó en 2020, con más seguidores en las dos temporadas siguientes, se perdió por poco una victoria en Rusia 2021, ya que dominó a otro compañero de equipo más veterano, Daniel Ricciardo, para establecerse firmemente en el nivel superior de la F1.</p>
+            <p>Un talento emocionante en la pista, lejos de él, Norris rebosa de un encanto modesto y un lado artístico lo ve diseñar y pintar su propio equipo de carreras como un pasatiempo. El enfoque para el futuro es aliar el arte y la ambición en la pista, ya que McLaren confía en la promesa de la juventud para llevarlos de vuelta a la cima.</p>
         </div>
     </section>
 
