--- a/pilotos/nyckDeVries.html
+++ b/pilotos/nyckDeVries.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Nyck De Vries</title>
 </head>
 <body>
     <header>
@@ -25,16 +25,16 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/nyckDeVries.jpg" alt="nyck">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>21</p>
+                    <img src="/img/bandera_holanda.png" alt="bandera">
+                    <h4>Nick De Vries</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_nick.png" alt="casco_nick">
                 <table>
                     <tr>
                         <th>Equipo</th>
@@ -42,7 +42,7 @@
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Holanda</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
@@ -50,11 +50,11 @@
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>2</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>2</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>9 (x1)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>8</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>06/02/1995</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Uitwellingerga, Holanda</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,9 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>Nyck de Vries tuvo que esperar hasta los 27 años para tener la oportunidad de competir en F1, pero fue una oportunidad que el holandés aprovechó para convertirse en una de las mejores opciones en el mercado de pilotos y, finalmente, conseguir un contrato a tiempo completo. con AlfaTauri.</p>
+            <p>Versado en maquinaria de F1 gracias a su papel de reserva de Mercedes, que incluyó varias carreras en el FP1 para los equipos de trabajo y proveedores en 2022-spec cars, De Vries encajado a la perfección cuando Williams inesperadamente lo llamó para reemplazar al enfermo Alex Albon en el Gran Premio de Italia 2022.</p>
+            <p>De Vries, un novato de F1 mayor que muchos antes que él, buscará combinar la experiencia adicional que ha ganado a lo largo de los años con su ritmo incuestionable y asegurarse de que el deporte se convierta en el hogar de la fase pico de su carrera de automovilismo.</p>
         </div>
     </section>
 
