--- a/pilotos/russell.html
+++ b/pilotos/russell.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>George Russell</title>
 </head>
 <body>
     <header>
@@ -25,36 +25,36 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/russell.jpg" alt="russell">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>63</p>
+                    <img src="/img/bandera_reinoUnido.jpg" alt="bandera">
+                    <h4>George Russell</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_russell.png" alt="casco_hamilton">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Mercedes</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Reino Unido</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>9</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>300</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>83</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>1 (x1)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>15/02/1998</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>King's Lynn, Inglaterra</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,12 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>George Russell lo ha vivido a lo largo de su carrera en la F1 hasta la fecha, superando a su experimentado compañero de equipo Robert Kubica en los 21 Grandes Premios en su temporada de novato, volviendo a poner a Williams en el podio en 2021 y consiguiendo su primera victoria con Mercedes en 2022.</p>
+            <p>Esa brillante velocidad de línea de fondo le sirvió bien a Russell mientras ganaba títulos en su camino hacia la Fórmula 1. El británico irrumpió en el campeonato de GP2017 3 y entregó la corona de Fórmula 2018 2 bajo una inmensa presión.</p>
+            <p>Al ver su potencial, los campeones del mundo Mercedes se abalanzaron para firmarlo en su programa junior en 2017, cuando Russell ya tenía un acuerdo DTM sobre la mesa. Acumuló más experiencia con sesiones de práctica con Force India y pruebas para las Flechas de Plata, antes de aterrizar su carrera Williams con motor Mercedes.</p>
+            <p>Mantuvo la cabeza baja en Williams en 2021, anotando sus primeros puntos y podio, mientras mantenía la vista en el premio mayor. Habiendo demostrado ser un gran trabajador y un talento tenaz, ese premio llegó en forma de una oportunidad de enfrentarse a su compatriota y siete veces campeón Hamilton en una maquinaria idéntica.</p>
+            <p>Fue una oportunidad que Russell disfrutó, ya que obtuvo su primera victoria en la F1, y la única victoria de Mercedes en 2022, en Brasil, en camino al cuarto lugar en el campeonato de pilotos, dos lugares y 35 puntos por delante de su ilustre compañero de equipo.</p>
+            <p>Si las Flechas de Plata pueden producir un automóvil verdaderamente competitivo para 2023, una oferta por el título seguramente lo atrae. Un gran desafío, pero como siempre, 'Russell the Rocket' irá a tope.</p>
         </div>
     </section>
 
