--- a/pilotos/sainz.html
+++ b/pilotos/sainz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Carlos Sainz</title>
 </head>
 <body>
     <header>
@@ -25,36 +25,36 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/sainz.jpg" alt="sainz">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>55</p>
+                    <img src="/img/bandera_españa.jpg" alt="bandera">
+                    <h4>Carlos Sainz</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_sainz.png" alt="casco_sainz">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Ferrari</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>España</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>15</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>794</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>164</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>1 (x1)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>17/09/1994</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Madrid, España</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,11 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>Después de entrar en el Bull Ring de la F1 junto a Max Verstappen en Toro Rosso en 2015, Sainz mostró rápidamente su espíritu de lucha. Un corredor tenaz, pone el coche en el borde mientras se abre paso a través del pelotón. No es de extrañar que Sainz se haya ganado el apodo de Chilli.</p>
+            <p>Pero el español es inteligente e instintivo, pensando en su camino a través de una carrera y en los puntos. Este temperamento tranquilo lo sigue fuera de la pista, donde no se inmuta por las presiones de forjar una carrera en un Gran Premio con un nombre famoso.</p>
+            <p>Sainz es hijo del doble campeón del mundo de rallyes, también su homónimo, y ha traído algunas de las habilidades de conducción de papá al circuito de F1: a junior le encanta una deliciosa dosis de derrape.</p>
+            <p>Después de seguir las pistas de neumáticos de su famoso padre, Sainz ha tenido grandes botas de carreras que llenar, primero en McLaren, donde reemplazó a su héroe de la infancia Fernando Alonso, y ahora en Ferrari, en el asiento que anteriormente pertenecía a Sebastian Vettel.</p>
+            <p>Nunca es fácil vivir a la sombra de los gigantes deportivos, pero Sainz ha demostrado el impulso y la disposición para lidiar con eso, y en 2022 obtuvo su primera victoria en la F1 con la victoria en Silverstone.</p>
         </div>
     </section>
 
