--- a/pilotos/stroll.html
+++ b/pilotos/stroll.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Lance Stroll</title>
 </head>
 <body>
     <header>
@@ -25,36 +25,36 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/stroll.jpg" alt="stroll">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>14</p>
+                    <img src="/img/bandera_canada.jpg" alt="bandera">
+                    <h4>Lance Stroll</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_stroll.png" alt="casco_stroll">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Aston Martin</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Canada</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>3</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>202</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>123</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>3 (x3)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>29/10/1998</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Montreal, Canada</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,10 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>No hay tal cosa como demasiado pronto para Stroll, una sensación adolescente con una predilección por el clima húmedo. Uno de los chicos geniales de la parrilla, Stroll fue presentado poco después de su cumpleaños número 18 por Williams, antes de terminar la escuela secundaria y obtener su licencia de conducir.</p>
+            <p>Stroll significó negocios en su temporada debut 2017, estableciendo récords en el camino. Un corredor oportunista saltó al podio en Bakú, el novato más joven en hacerlo. Como hijo de un rico empresario, Stroll está acostumbrado a un estilo de vida de champán, pero ahora sabe que la efervescencia sabe aún más dulce en la tribuna. Luego, en Monza, dominó los aguaceros para convertirse en el piloto más joven de la historia en alinearse en la primera fila.</p>
+            <p>Un titular decidido, al canadiense le encanta recuperar lugares en la primera vuelta y luchar por los puntos. Stroll tiene el potencial de ser un elemento fijo a largo plazo en la Fórmula 1, como lo ilustra ampliamente una pole inaugural y otros dos podios en 2020.</p>
+            <p>Estos se produjeron después de que su padre Lawrence liderara el consorcio que se hizo cargo de Force India a mediados de la temporada 2018, y luego lo transformó de Racing Point a Aston Martin para 2021. El futuro parece brillante tanto para el equipo como para su joven piloto, e incluso si llueve, Stroll puede seguir pilotando en el extremo afilado del pelotón.</p>
         </div>
     </section>
 
