--- a/pilotos/zhou.html
+++ b/pilotos/zhou.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Zhou Guanyu</title>
 </head>
 <body>
     <header>
@@ -25,24 +25,24 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/zhou.jpg" alt="zhou">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>24</p>
+                    <img src="/img/bandera_china.jpg" alt="bandera">
+                    <h4>Zhou Guanyu</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_zhou.png" alt="casco_zhou">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Alfa Romeo</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>China</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
@@ -50,11 +50,11 @@
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>6</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>23</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>8 (x1)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>9</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>30/05/1999</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Shanghai, China</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,10 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>El piloto nacido en Shanghai asistió al Gran Premio inaugural de su ciudad natal en 2004 a la edad de cinco años, animando a su héroe Fernando Alonso. Pero después de haber cogido el gusanillo de las carreras, el piloto chino se fijó el ambicioso objetivo de convertirse en el primer piloto de F1 de su país, logrando una hazaña que Ma Qinghua, el único otro piloto chino que participó en un fin de semana de Fórmula 1, nunca logró.</p>
+            <p>Mostrando audacia y dedicación, Zhou puso su plan en acción al mudarse a Inglaterra con su familia de solo 12 años para perseguir sus ambiciones en el automovilismo. Un segundo lugar en el campeonato italiano de F2015 4 demostró que Zhou poseía las cosas correctas, un hecho ya señalado por Ferrari, quien lo había firmado para su academia de pilotos un año antes.</p>
+            <p>Un traslado a la academia de Renault para 2019 coincidió con su debut en la Fórmula 2, con Zhou construyendo su confianza en la serie a través de múltiples victorias y pole positions en tres temporadas, lo que lo llevó a luchar por el título de pilotos en 2021.</p>
+            <p>Eso fue suficiente para convencer al director del equipo Alfa Romeo, Fred Vasseur, de que confiara en Zhou para 2022 y lo alineara junto al ex piloto de Mercedes Valtteri Bottas, lo que le permitió a Zhou lograr su sueño de competir en la F1, e incluso ver cómo le va contra su propio héroe de la infancia, Fernando Alonso.</p>
         </div>
     </section>
 
