--- a/escuderias/astonMartin.html
+++ b/escuderias/astonMartin.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Tauri</title>
+    <title>Aston Martin</title>
     <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/css/alphaTauri.css">
+    <link rel="stylesheet" href="/css/astonMartin.css">
 </head>
 
 <body>
@@ -25,42 +25,42 @@
         </div>
     </header>
 
-    <h1>ALPHA TAURI</h1>
+    <h1>ASTON MARTIN</h1>
     <div class="underline"></div>
 
     <section>
         
         <div class="escuderia">
-            <img src="/img/alpha_tauri.jpg" alt="logo">
+            <img src="/img/aston_martin.jpg" alt="logo">
             <div>
                 <table>
                     <tr>
                         <th>Nombre Completo</th>
-                        <td>Scuderia AlphaTauri</td>
+                        <td>Aston Martin Aramco Cognizant F1 Team</td>
                     </tr>
                     <tr>
                         <th>Base</th>
-                        <td>Faenza, Italia</td>
+                        <td>Silverstone, Reino Unido</td>
                     </tr>
                     <tr>
                         <th>Jefe de Equipo</th>
-                        <td>Franz Tost</td>
+                        <td>Mike Krack</td>
                     </tr>
                     <tr>
                         <th>Jefe Tecnico</th>
-                        <td>Jody Egginton</td>
+                        <td>Andrew Green</td>
                     </tr>
                     <tr>
                         <th>Chasis</th>
-                        <td>AT04</td>
+                        <td>AMR23</td>
                     </tr>
                     <tr>
                         <th>Unidad de Potencia</th>
-                        <td>Honda RBPT</td>
+                        <td>Mercedes</td>
                     </tr>
                     <tr>
                         <th>Primera Aparicion</th>
-                        <td>1985</td>
+                        <td>2018</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -68,7 +68,7 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>1 (x2)</td>
+                        <td>1 (x1)</td>
                     </tr>
                     <tr>
                         <th>Poles</th>
@@ -76,23 +76,23 @@
                     </tr>
                     <tr>
                         <th>Vueltas Rapidas</th>
-                        <td>2</td>
+                        <td>N/A</td>
                     </tr>
                 </table>
 
             </div>
             <div class="escuderia_pilotos">
                 <div class="pilotos">
-                    <a href="/pilotos/tsunoda.html"><img src="/img/tsunoda.jpg" alt="alpha_tauri"></a>
-                    <h4>22</h4>
-                    <p>Yuki Tsunoda</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/alonso.html"><img src="/img/alonso.jpg" alt="aston_martin"></a>
+                    <h4>14</h4>
+                    <p>Fernando Alonso</p>
+                    <h5>ASTON MARTIN</h5>
                 </div>
                 <div class="pilotos">
-                    <a href="/pilotos/nyckDeVries.html"><img src="/img/nyckDeVries.jpg" alt="alpha_tauri"></a>
-                    <h4>21</h4>
-                    <p>Nick De Vries</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/stroll.html"><img src="/img/stroll.jpg" alt="aston_martin"></a>
+                    <h4>18</h4>
+                    <p>Lance Stroll</p>
+                    <h5>ASTON MARTIN</h5>
                 </div>
             </div>
         </div>
