--- a/escuderias/mercedes.html
+++ b/escuderias/mercedes.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Tauri</title>
+    <title>Mercedes</title>
     <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/css/alphaTauri.css">
+    <link rel="stylesheet" href="/css/mercedes.css">
 </head>
 
 <body>
@@ -25,74 +25,74 @@
         </div>
     </header>
 
-    <h1>ALPHA TAURI</h1>
+    <h1>MERCEDES</h1>
     <div class="underline"></div>
 
     <section>
         
         <div class="escuderia">
-            <img src="/img/alpha_tauri.jpg" alt="logo">
+            <img src="/img/mercedes.jpg" alt="logo">
             <div>
                 <table>
                     <tr>
                         <th>Nombre Completo</th>
-                        <td>Scuderia AlphaTauri</td>
+                        <td>Mercedes-AMG PETRONAS F1 Team</td>
                     </tr>
                     <tr>
                         <th>Base</th>
-                        <td>Faenza, Italia</td>
+                        <td>Brackley, Reino Unido</td>
                     </tr>
                     <tr>
                         <th>Jefe de Equipo</th>
-                        <td>Franz Tost</td>
+                        <td>Toto Wolff</td>
                     </tr>
                     <tr>
                         <th>Jefe Tecnico</th>
-                        <td>Jody Egginton</td>
+                        <td>Mike Elliott</td>
                     </tr>
                     <tr>
                         <th>Chasis</th>
-                        <td>AT04</td>
+                        <td>W14</td>
                     </tr>
                     <tr>
                         <th>Unidad de Potencia</th>
-                        <td>Honda RBPT</td>
+                        <td>Mercedes</td>
                     </tr>
                     <tr>
                         <th>Primera Aparicion</th>
-                        <td>1985</td>
+                        <td>1970</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
-                        <td>N/A</td>
+                        <td>8</td>
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>1 (x2)</td>
+                        <td>1 (x116)</td>
                     </tr>
                     <tr>
                         <th>Poles</th>
-                        <td>1</td>
+                        <td>128</td>
                     </tr>
                     <tr>
                         <th>Vueltas Rapidas</th>
-                        <td>2</td>
+                        <td>91</td>
                     </tr>
                 </table>
 
             </div>
             <div class="escuderia_pilotos">
                 <div class="pilotos">
-                    <a href="/pilotos/tsunoda.html"><img src="/img/tsunoda.jpg" alt="alpha_tauri"></a>
-                    <h4>22</h4>
-                    <p>Yuki Tsunoda</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/hamilton.html"><img src="/img/hamilton.jpg" alt="mercedes"></a>
+                    <h4>44</h4>
+                    <p>Lewis Hamilton</p>
+                    <h5>MERCEDES</h5>
                 </div>
                 <div class="pilotos">
-                    <a href="/pilotos/nyckDeVries.html"><img src="/img/nyckDeVries.jpg" alt="alpha_tauri"></a>
-                    <h4>21</h4>
-                    <p>Nick De Vries</p>
-                    <h5>ALHPATAURI</h5>
+                    <a href="/pilotos/russell.html"><img src="/img/russell.jpg" alt="mercedes"></a>
+                    <h4>63</h4>
+                    <p>George Russell</p>
+                    <h5>MERCEDES</h5>
                 </div>
             </div>
         </div>
