--- a/pilotos/bottas.html
+++ b/pilotos/bottas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Valtteri Bottas</title>
 </head>
 <body>
     <header>
@@ -25,36 +25,36 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/bottas.jpg" alt="bottas">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>77</p>
+                    <img src="/img/finlandia.gif" alt="bandera">
+                    <h4>Valtteri Bottas</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_bottas.png" alt="casco_bottas">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Alfa Romeo</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Finlandia</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>67</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>1791</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>201</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>1 (x10)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>28/08/1989</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Nastola, Finlandia</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,12 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>Haciendo su debut en la F1 con Williams en 2013, Bottas pronto se convirtió en parte de la familia. Siguieron puntos y podios con el corredor confiable incluso acumulando la mayor cantidad de puntos sin ganar, un récord que le molestó pero que mostró su habilidad. El hecho de que el finlandés fuera una máquina de puntos lo vio ascender repentinamente al asiento más codiciado de la F1: el asiento vacante de Nico Rosberg en Mercedes.</p>
+            <p>Bottas floreció en las Flechas de Plata en 2017, desatando su ritmo para registrar pole positions y victorias personales, así como un campeonato de equipos para la famosa marca Mercedes junto a Lewis Hamilton. Incluso empató con Hamilton y Sebastian Vettel con 13 podios.</p>
+            <p>Para un tipo tímido, trajo un impulso de confianza y una nueva arrogancia, aunque de una manera finlandesa muy recatada. Necesitaría toda esa confianza en 2018, una temporada que Bottas describió como su peor en la F1, ya que obtuvo cero victorias frente a las 11 de Hamilton. Eso, sin embargo, fue un reflejo más de la brillantez de su compañero de equipo que de cualquier deficiencia de su parte.</p>
+            <p>Bottas subió de nivel en 2019, cuatro victorias aseguraron un convincente segundo lugar en el campeonato detrás de Hamilton, pero eso se redujo a dos victorias frente a las 11 de su compañero de equipo en 2020 y luego solo una en 2021, lo que llevó a Mercedes a dejarlo caer después de cinco temporadas.</p>
+            <p>En 2022 comenzó un nuevo capítulo en su carrera en la F1, reemplazando a su compatriota Kimi Raikkonen para liderar una alineación completamente nueva en Alfa Romeo, y tomando al novato chino Zhou Guanyu bajo su ala.</p>
+            
         </div>
     </section>
 
