--- a/pilotos/hamilton.html
+++ b/pilotos/hamilton.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Lewis Hamilton</title>
 </head>
 <body>
     <header>
@@ -25,56 +25,56 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/hamilton.jpg" alt="hamilton">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>44</p>
+                    <img src="/img/bandera_reinoUnido.jpg" alt="bandera">
+                    <h4>Lewis Hamilton</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_hamilton.png" alt="casco_hamilton">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>Mercedes</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Reino Unido</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
-                        <td>N/A</td>
+                        <td>191</td>
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>4415</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>311</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
-                    </tr>
-                    <tr>
-                        <th>Posicion mas alta de Parrilla</th>
                         <td>7</td>
                     </tr>
                     <tr>
+                        <th>Mejor Final de Carrera</th>
+                        <td>1 (x103)</td>
+                    </tr>
+                    <tr>
+                        <th>Posicion mas alta de Parrilla</th>
+                        <td>1</td>
+                    </tr>
+                    <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>07/01/1985</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Stevenage, Inglaterra</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,9 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>'Still I Rise': estas son las palabras estampadas en la parte posterior del casco de Lewis Hamilton y tatuadas en sus hombros, y desde que aniquiló las expectativas con una de las mejores actuaciones de novato en la historia de la F1 en 2007, eso es literalmente todo lo que ha hecho: subir a la cima de la lista de pole positions de todos los tiempos por delante de su héroe Ayrton Senna. subió al primer lugar en la columna de victorias superando al inimitable Michael Schumacher, y luego igualó los siete títulos mundiales del legendario alemán.</p>
+            <p>¿Es él el G.O.A.T? Pocos negarían que está en la conversación, y lo que es más, se ha salido con la suya, hermanando su velocidad implacable con una negativa a ajustarse a los estereotipos de cómo debe pensar, vestirse o comportarse un piloto de carreras.</p>
+            <p>El respeto se gana con esfuerzo en la F1, pero Hamilton, ahora Sir Lewis Hamilton para ser precisos, lo tiene de cada uno de sus compañeros. ¿Por qué? Porque saben que sea cual sea la pista, cualesquiera que sean las condiciones, sea cual sea la situación, cuando su visera se apaga y las luces se apagan, es Hammertime.</p>
         </div>
     </section>
 
