--- a/pilotos/piastri.html
+++ b/pilotos/piastri.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Yuki Tsunoda</title>
+    <title>Oscar Piastri</title>
 </head>
 <body>
     <header>
@@ -25,24 +25,24 @@
     <section>
         <div class="piloto_unico">
             <div class="imagen_piloto">
-                <img class="imagen_piloto" src="/img/tsunoda.jpg" alt="tsunoda">
+                <img class="imagen_piloto" src="/img/piastri.jpg" alt="piastri">
                 <div>
-                    <p>22</p>
-                    <img src="/img/bandera_japon.jpg" alt="bandera">
-                    <h4>Yuki Tsunoda</h4>
+                    <p>81</p>
+                    <img src="/img/bandera_australia.jpg" alt="bandera">
+                    <h4>Oscar Piastri</h4>
                 </div>
             </div>
 
             <div>
-                <img src="/img/casco_tsunoda.png" alt="casco_tsunoda">
+                <img src="/img/casco_piastri.png" alt="casco_norris">
                 <table>
                     <tr>
                         <th>Equipo</th>
-                        <td>AlphaTauri</td>
+                        <td>McLaren</td>
                     </tr>
                     <tr>
                         <th>Pais</th>
-                        <td>Japón</td>
+                        <td>Australia</td>
                     </tr>
                     <tr>
                         <th>Podios</th>
@@ -50,11 +50,11 @@
                     </tr>
                     <tr>
                         <th>Puntos</th>
-                        <td>44</td>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <th>Grandes Premios</th>
-                        <td>45</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Campeonatos del Mundo</th>
@@ -62,19 +62,19 @@
                     </tr>
                     <tr>
                         <th>Mejor Final de Carrera</th>
-                        <td>4 (x1)</td>
+                        <td>0 (x1)</td>
                     </tr>
                     <tr>
                         <th>Posicion mas alta de Parrilla</th>
-                        <td>7</td>
+                        <td>1</td>
                     </tr>
                     <tr>
                         <th>Fecha de Nacimiento</th>
-                        <td>11/05/2000</td>
+                        <td>13/11/1999</td>
                     </tr>
                     <tr>
                         <th>Lugar de Nacimiento</th>
-                        <td>Sagamihara, Japón</td>
+                        <td>Bristol, Reino Unido</td>
                     </tr>
                 </table>
             </div>
@@ -84,10 +84,12 @@
     <section>
         <div class="bio_piloto">
             <h1>Biografia</h1>
-            <p>En toda la historia de la Fórmula 1, ningún piloto japonés ha ganado nunca un Gran Premio del Campeonato del Mundo. ¿Podría Yuki Tsunoda ser el primero? Red Bull ciertamente piensa que sí, con el joven en camino a su equipo senior si continúa impresionando como lo ha hecho en los últimos años.</p>
-            <p>El ascenso de Tsunoda al nivel más alto del automovilismo fue asombrosamente rápido: pasó de correr en la F4 japonesa a un asiento de Fórmula 1 con AlphaTauri en poco más de tres años, habiendo llegado a Europa en 2019 sin conocimiento de los circuitos.</p>
-            <p>Pero después de un comienzo lento en F3, seguido de una impresionante campaña de debut en F2 que lo vio terminar tercero en el campeonato y obtener tres victorias en el camino, Tsunoda demostró que tenía la velocidad y el oficio de carrera para forzar su camino hacia el rejilla F1.</p>
-            <p>Es posible que no se haya adaptado a las carreras de Grand Prix tan rápido como lo hizo con la F2, pero con el tiempo, aún podría encontrarse luchando en el extremo más afilado de un Red Bull.</p>
+            <p>Nacido en Melbourne, a tiro de piedra de la sede del Gran Premio de Australia, los sueños de un joven Oscar Piastri de competir algún día en la Fórmula 1 fueron encendidos por los pilotos estrella del deporte rugiendo por sus calles locales, también conocidas como Albert Park.</p>
+            <p>Pero se necesitaría un gran compromiso y sacrificio para convertir ese sueño en realidad, con un traslado a Europa, hecho por compatriotas como Mark Webber y Daniel Ricciardo antes que él, la única forma de enfrentarse a los mejores y llamar la atención de los tomadores de decisiones del deporte.</p>
+            <p>Utilizando el éxito en la escena del karting australiano como trampolín, Piastri continuó aprendiendo el oficio en campeonatos en toda Europa, antes de probar por primera vez la competencia de monoplazas a los 15 años: dos podios en F4 UAE son una señal de lo que vendrá.</p>
+            <p>A partir de ahí, el éxito fluyó. Subcampeón británico de F4. Campeón de Fórmula Renault. Campeón de F3. Campeón de F2 (por más de 50 puntos). Piastri no se limitó a subir la escalera de monoplazas junior, sino que la subió para llamar ruidosamente a la puerta de la F1.</p>
+            <p>Tan impresionante fue Piastri que dos equipos de F1 se pelearon por sus servicios para 2023, agregando una nueva dimensión al mercado de pilotos y la llamada "temporada tonta".</p>
+            <p>Después de una reunión de la Junta de Reconocimiento de Contratos, se confirmó que era McLaren, y no los patrocinadores de larga data Alpine, quien tenía derecho a los servicios de Piastri, y con quien el piloto de 21 años está listo para realizar su sueño de F1.</p>
         </div>
     </section>
 
